nacls_utf8.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0317a133055c1fdc5",
                    "NetworkAclId": "acl-0cb28a0df311c4685",
                    "SubnetId": "subnet-0ec8deff6a5404fc1"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-09ec44b9a77082f16",
                    "NetworkAclId": "acl-0cb28a0df311c4685",
                    "SubnetId": "subnet-0b245b22fff2ac752"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0e42e905f2e9b9e37",
                    "NetworkAclId": "acl-0cb28a0df311c4685",
                    "SubnetId": "subnet-0325449ab02316e94"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0cb28a0df311c4685",
            "Tags": [],
            "VpcId": "vpc-014ca88f5167caa57",
            "OwnerId": "108750423267"
        }
    ]
}
